# OLS

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  base.html  compatibility.json  package-lock.json  package.json  site.config.mjs
.github/workflows/: sdk-ci.yml  sdk-release-dry-run.yml  sdk-release.yml
fixtures/complete-minimal/: corpus.ols.json  manifest.ols.json
python/: README.md  pyproject.toml
python/ols_sdk/: references.py  validation.py
python/ols_sdk/_schemas/: authority.schema.json  conformance.schema.json  inline-chant.schema.json  manifest.schema.json  section.schema.json  teaching-note.schema.json  test-fixture.schema.json  variant.schema.json
python/openliturgy/: __init__.py  cli.py  loading.py  models.py  schemas.py  validation.py
python/openliturgy/_schemas/: asset.schema.json  block.schema.json  chant.schema.json  citation.schema.json  corpus.schema.json  execution-timeline.schema.json  liturgical-day.schema.json  localized-text.schema.json  ordo.schema.json  person.schema.json  proper-slot.schema.json  proper.schema.json  provenance.schema.json  reading.schema.json  role-group.schema.json  role.schema.json  rubric-state-transition.schema.json  rubric.schema.json  scope.schema.json  transliteration.schema.json  utterance.schema.json  verse-line-group.schema.json
python/tests/: test_validation.py
src/: index.css
src/components/: Header.astro  Sidebar.astro
src/data/: docs.ts  ols-schemas.ts  structured-data.ts  (+1 more)
tools/: bootstrap-schemas.mjs  check-schemas.mjs  parity-test.mjs  sync-python-schemas.mjs
(+58 files in other folders)
